fix: added /post to swagger routes
